# mizu-workflow

./: .gitignore  pyproject.toml
app/: auth.py  main.py  publisher.py  response.py
app/db/: database.py  query.py
app/jobs/: publisher.py
app/models/: __init__.py  dataset.py  query.py  query_result.py  service.py
migrations/: create_query_table.sql  create_table.sql
scripts/: load_dataset.py
