[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["shudong <dongs2011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
pydantic-settings = "^2.6.1"
psycopg2-binary = "^2.9.10"
pyjwt = "^2.10.1"
aiohttp = "^3.11.10"

aioboto3 = "^13.2.0"
sqlalchemy = "^2.0.36"
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.server:start"
start-dev = "app.server:start_dev"

load-dataset = "scripts.load_dataset:start"
